--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,6 @@ jobs:
         run: |
           pip install -e .[dev]
       - name: Run pytest
+        shell: bash
         run: |
-          python -m pytest || exit $(($? == 5)) # Ignore "no tests collected"
+          python -m pytest || (exit $(($? != 5))) # Ignore "no tests collected"
