--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dev = [
     "pytest>=7.0.0",
     "pyright>=1.1.0",
     "pytest-benchmark>=4.0.0",
+    "ruff>=0.14.0"
 ]
 examples = [
     "matplotlib>=3.6.2",
