--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "flax>=0.8.0",
     "optax>=0.1.3",
     "jaxtyping>=0.2.0",
+    "diffrax>=0.7.0",
 ]
 dynamic = ["version"]
 
