--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ classifiers = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "jax>=0.8.0,<0.9.0",
-    "flax>=0.10.0,<0.11.0",
+    "jax>=0.9.0",
+    "flax>=0.11.0",
     "optax>=0.1.3",
     "jaxtyping>=0.2.0",
 ]
